# libmimemagic

./: .gitignore  LICENSE  Makefile.in  Notes  README.md  ToDo  compile.py  configure.ac  cvt.py  epilogue.c  exceptions  generate.py  keep  libmimemagic.pc.in  libmimemagic.spec.in  magic  mime.exceptions  mimemagic.c  mimemagic.h  mimemagic.man  mimemagic_priv.h  mktar  original_list  prologue.c  sample  utils.py  utils_test.py  version.in
Magdir/: Localstuff  archive  archive.zip2.0  audio  cafebabe  elf  elf.0  filesystems  images  linux  msad  msdos  terminfo
tests/: .gitignore  Makefile  perf.1  perf.3  perf_6Oct_optim  run  run_libmagic.c  run_test.c  test03.pl  test03b.pl  test04.c  test05.html  test07.avi  test08.rar  test10.xml  test15.bz2  test16.flv  test23.doc  test26.xcf  test29.kdelnk  test30.doc  test31.mif  test32.txt  test33.tex  test34.rpm  test35.tar  test37.fr  test38.py  test39.elf
