
AC_PREREQ(2.69)
AC_INIT([libmimemagic], [0.2], [als@iinet.net.au])
AC_SUBST(PACKAGE_RELEASE, [1])

#AC_CONFIG_SRCDIR([Exceptions.hh])
#AC_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CXX

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_HEADER_STDC

AC_CONFIG_FILES([Makefile])
AC_CONFIG_FILES([libmimemagic.spec])
AC_CONFIG_FILES([libmimemagic.pc])
AC_CONFIG_FILES([version])
AC_OUTPUT

